--- a/China.css
+++ b/China.css
@@ -35,7 +35,8 @@ h1{
     margin-bottom: 25px;
 }
 .container{
-    max-width: 1000px;
+    max-width: 100%;
+    height: auto;
     margin: 0 auto;
     padding: 20px;
     border-radius: 8px;
@@ -107,9 +108,14 @@ h3{
 .img-china{
     margin-top: 30px;
     margin-left: 10px ;
-    width: 920px;
+    
+    max-width: 100%;
+    height: auto;
 }
-
+iframe{
+    max-width: 100%;
+    height: auto;
+}
 #derechos{
     color:white;
 }
