--- a/China.css
+++ b/China.css
@@ -108,7 +108,7 @@ h3{
 .img-china{
     margin-top: 30px;
     margin-left: 10px ;
-    
+    width: 920px;
     max-width: 100%;
     height: auto;
 }
